# ledger-py

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
deploy/: DEPLOY.md
deploy/helm/ledger-py/: Chart.yaml  values.yaml
deploy/helm/ledger-py/templates/: _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-relay.yaml  deployment-worker.yaml  hpa-api.yaml  ingress.yaml  migrate-env.yaml  migrate-job.yaml  pdb.yaml  secret.yaml  service.yaml
deploy/otel/: collector.yaml
deploy/postgres-init/: .gitkeep
docs/adr/: 0001-temporal-owns-process-es-owns-state.md  0002-python-314-baseline.md  0003-residual-credit-failure-parks-for-reconciliation.md
openspec/: project.md
openspec/changes/archive/2026-07-17-add-saga-cockpit-ui/: README.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-17-add-transfer-reconciliation/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-17-add-transfer-resolve-endpoint/: README.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-17-fix-eventstore-gapless-tailing/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-17-harden-api-error-edges/: README.md  proposal.md  (+1 more)
openspec/specs/accounts/: spec.md
openspec/specs/api/: spec.md
openspec/specs/deployment/: spec.md
openspec/specs/event-store/: spec.md
openspec/specs/idempotency/: spec.md
openspec/specs/ledger/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/outbox/: spec.md
openspec/specs/projections/: spec.md
openspec/specs/showcase/: spec.md
openspec/specs/transfers/: spec.md
scripts/: mutation_gate.py
src/ledger/: __init__.py
src/ledger/api/: __init__.py  auth.py  context.py  gateway.py  idempotency.py  main.py  problem_details.py  schemas.py
src/ledger/config/: __init__.py  settings.py
src/ledger/domain/: __init__.py
src/ledger/eventstore/: __init__.py  factory.py  memory.py  migrate.py  postgres.py  records.py  registry.py  repository.py  schema.py  serialization.py  store.py
src/ledger/idempotency/: __init__.py
src/ledger/observability/: __init__.py  setup.py
src/ledger/ops/: __init__.py  router.py
src/ledger/outbox/: __init__.py  main.py  relay.py
src/ledger/projections/: __init__.py  pg_checkpoints.py  read_models.py  read_models_service.py  runner.py
src/ledger/showcase/: __init__.py  playground.html  router.py
src/ledger/temporal/: __init__.py  client.py  dependencies.py  messages.py  worker.py
tests/integration/: test_postgres_store.py  test_transfer_saga.py
tests/unit/: test_account.py  test_api.py  test_eventstore.py  test_ledger.py  test_outbox.py  test_projections.py  test_property_ledger.py  test_property_money.py  test_scaffold.py  test_shared_domain.py  test_transfer.py  test_transfer_activities.py  test_transfer_metadata.py  test_transfer_workflow.py
(+124 files in other folders)
