[project]
name = "ledger-core"
version = "0.1.0"
description = "Event-sourced payment ledger orchestrated with Temporal — Python core."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }
authors = [{ name = "xdrew" }]

dependencies = [
    "temporalio>=1.9",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "structlog>=25.1",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp>=1.30",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-asyncpg>=0.51b0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx2>=2.7",  # starlette TestClient's HTTP client (httpx v1 is deprecated by starlette)
    "hypothesis>=6.125",
    "testcontainers[postgres]>=4.9",
    "mutmut>=3.2",
]

[project.scripts]
ledger-worker = "ledger.temporal.worker:main"
ledger-api = "ledger.api.main:main"
ledger-migrate = "ledger.eventstore.migrate:main"
ledger-relay = "ledger.outbox.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ledger"]
artifacts = ["**/*.html"]

[tool.uv]
package = true

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
# TC (flake8-type-checking) intentionally omitted: with PEP 649 deferred
# annotations the import-into-TYPE_CHECKING dance is churn without payoff for an
# app (vs. a library). pyright still catches real import cycles.
select = [
    "E", "F", "I", "N", "UP", "B", "C4", "SIM", "PL", "RUF", "ASYNC",
]
ignore = [
    "PLR2004", # magic values — noisy in domain tests
    "PLR0913", # many-args — activities/constructors legitimately take several
    "N818",    # domain exceptions read as CurrencyMismatch / ConcurrencyConflict, not ...Error
]

[tool.ruff.lint.isort]
known-first-party = ["ledger"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
branch = true
source = ["src/ledger"]
omit = ["src/ledger/**/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",  # Protocol method bodies
]

# mutmut — mutation testing (the Infection analogue). Run on demand: `just mutation`.
[tool.mutmut]
paths_to_mutate = ["src/ledger/domain/"]
tests_dir = ["tests/unit/"]
